--- a/pages/Drinks.html
+++ b/pages/Drinks.html
@@ -94,7 +94,7 @@
       <div class="row disappearJ bgWhite">
         <div class="col topFive">
           <div class="card" style="width: 280px; border: 0;">
-            <img src="../assets/drinkCard1.png" class="card-img-top" alt="Tangy Taro">
+            <img class="img-fluid hover2" src="../assets/drinkCard1.png" class="card-img-top" alt="Tangy Taro">
             <div class="card-body">
               <p class="card-text sansCollectionJ sandwichT">#1 Favorite
               <div class="sandwichTxtT2 topFiveTxt">Tangy Taro</div> $5.89</p>
@@ -110,7 +110,7 @@
         </div>
         <div class="col topFive">
           <div class="card" style="width: 280px; border: 0;">
-            <img src="../assets/drinkCard2.png" class="card-img-top" alt="Green Tea Gangbusters">
+            <img class="img-fluid hover2"  src="../assets/drinkCard2.png" class="card-img-top" alt="Green Tea Gangbusters">
             <div class="card-body">
               <p class="card-text sansCollectionJ sandwichT ">"The Go To Drink"
               <div class="topFiveTxt">Green Tea Gangbusters</div> $5.89</p>
@@ -126,7 +126,7 @@
         </div>
         <div class="col topFive">
           <div class="card" style="width: 280px; border: 0;">
-            <img src="../assets/drinkCard3.png" class="card-img-top" alt="Iced Thai Tea">
+            <img class="img-fluid hover2"  src="../assets/drinkCard3.png" class="card-img-top" alt="Iced Thai Tea">
             <div class="card-body">
               <p class="card-text sansCollectionJ sandwichT">Top Seller
               <div class="sandwichTxtT2 topFiveTxt">Iced Thai Tea</div> $5.69</p>
@@ -142,7 +142,7 @@
         </div>
         <div class="col topFive">
           <div class="card" style="width: 280px; border: 0;">
-            <img src="../assets/drinkCard4.png" class="card-img-top" alt="Appealing Avocado">
+            <img class="img-fluid hover2"  src="../assets/drinkCard4.png" class="card-img-top" alt="Appealing Avocado">
             <div class="card-body">
               <p class="card-text sansCollectionJ sandwichT">#1 Recommended
               <div class="topFiveTxt">Appealing Avocado</div> $5.89</p>
@@ -158,7 +158,7 @@
         </div>
         <div class="col topFive">
           <div class="card" style="width: 280px; border: 0;">
-            <img src="../assets/drinkCard5.png" class="card-img-top" alt="Honeydew Milk Tea">
+            <img class="img-fluid hover2"  src="../assets/drinkCard5.png" class="card-img-top" alt="Honeydew Milk Tea">
             <div class="card-body">
               <p class="card-text sansCollectionJ sandwichT">#2 Recommended
               <div class="topFiveTxt"> Honeydew Milk Tea</div> $5.69</p>
@@ -176,7 +176,7 @@
     </div>
     <div class="row d-sm-block d-md-none" style="margin-bottom: 30px;">
       <div class="col g-0 menuImage">
-        <img src="../assssssssssssssssssssssssets/mobile1.jpg" style="width: 100%; height: 100%;"
+        <img class="img-fluid hover2"  src="../assssssssssssssssssssssssets/mobile1.jpg" style="width: 100%; height: 100%;"
           alt="Banh mi/sandwich">
       </div>
     </div>
