--- a/pages/Menu.html
+++ b/pages/Menu.html
@@ -95,7 +95,7 @@
             <div class="row disappearJ bgWhite">
                 <div class="col topFives">
                     <div class="card" style="width: 280px; border: 0;">
-                        <img src="../assets/banhMiCard1.png" class="card-img-top" alt="Picture of Grilled PorkBanh Mi">
+                        <img class="img-fluid hovers" src="../assets/banhMiCard1.png" class="card-img-top" alt="Picture of Grilled PorkBanh Mi">
                         <div class="card-body">
                             <p class="card-text sansCollectionJ sandwichT sandwichTxtT">#1 Favorite
                             <div class="topFiveTxt">Grilled Pork</div> $5.79</p>
@@ -111,7 +111,7 @@
                 </div>
                 <div class="col topFives">
                     <div class="card" style="width: 280px; border: 0;">
-                        <img src="../assets/banhMiCard2.png" class="card-img-top" alt="Picture of Vegetarian Banh Mi">
+                        <img class="img-fluid hovers" src="../assets/banhMiCard2.png" class="card-img-top" alt="Picture of Vegetarian Banh Mi">
                         <div class="card-body">
                             <p class="card-text sansCollectionJ sandwichT sandwichTxtT">#1 Diet Friendly
                             <div class="topFiveTxt">Vegetarian</div> $5.79</p>
@@ -127,7 +127,7 @@
                 </div>
                 <div class="col topFives">
                     <div class="card" style="width: 280px; border: 0;">
-                        <img src="../assets/BanhMiCard3.png" class="card-img-top" alt="Picture of BBQ Pork Banh Mi">
+                        <img class="img-fluid hovers" src="../assets/BanhMiCard3.png" class="card-img-top" alt="Picture of BBQ Pork Banh Mi">
                         <div class="card-body">
                             <p class="card-text sansCollectionJ sandwichT sandwichTxtT">Top Seller
                             <div class="topFiveTxt">BBQ Pork</div> $5.79</p>
@@ -143,7 +143,7 @@
                 </div>
                 <div class="col topFives">
                     <div class="card" style="width: 280px; border: 0;">
-                        <img src="../assets/banhMiCard4.png" class="card-img-top"
+                        <img class="img-fluid hovers" src="../assets/banhMiCard4.png" class="card-img-top"
                             alt="Picture of Ham and Cheese Croissant">
                         <div class="card-body">
                             <p class="card-text sansCollectionJ sandwichT sandwichTxtT">#1 Croissant
@@ -160,7 +160,7 @@
                 </div>
                 <div class="col topFives">
                     <div class="card" style="width: 280px; border: 0;">
-                        <img src="../assets/banhMiCard5.png" class="card-img-top"
+                        <img class="img-fluid hovers" src="../assets/banhMiCard5.png" class="card-img-top"
                             alt="Picture of Ham and Cheese Baguette">
                         <div class="card-body">
                             <p class="card-text sansCollectionJ sandwichT sandwichTxtT">#1 Baguette
