--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                 <div class="carousel-item" data-bs-interval="2600">
                     <div class="row centerJ">
                         <div class="card cardJ">
-                            <img class="img-fluid hover" src="./assets/banhMiCard4.png" class="card-img-top"
+                            <img class="img-fluid hover2" src="./assets/banhMiCard4.png" class="card-img-top"
                                 alt="Picture of Ham and Cheese Croissant">
                             <div class="card-body">
                                 <p class="card-text sansCollectionJ sandwichJ2 croissantMarginJ">#1 Croissant</p>
