--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
         <div class="row evenJ homePageMargin disappearJ" style="margin-top: 75px;">
             <div class="col centerJ">
                 <div class="card cardJ">
-                    <img class="img-fluid hover" src="./assets/banhMiCard1.png" class="card-img-top"
+                    <img class="hover" src="./assets/banhMiCard1.png" class="card-img-top"
                         alt="Picture of Grilled PorkBanh Mi">
                     <div class="card-body">
                         <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Favorite <span
@@ -254,7 +254,7 @@
             </div>
             <div class="col centerJ">
                 <div class="card cardJ">
-                    <img class="img-fluid hover" src="./assets/banhMiCard2.png" class="card-img-top"
+                    <img class=" hover" src="./assets/banhMiCard2.png" class="card-img-top"
                         alt="Picture of Vegetarian Banh Mi">
                     <div class="card-body">
                         <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Diet Friendly <span
@@ -271,7 +271,7 @@
             </div>
             <div class="col centerJ">
                 <div class="card cardJ">
-                    <img class="img-fluid hover" src="./assets/BanhMiCard3.png" class="card-img-top"
+                    <img class=" hover" src="./assets/BanhMiCard3.png" class="card-img-top"
                         alt="Picture of BBQ Pork Banh Mi">
                     <div class="card-body">
                         <p class="card-text sansCollectionJ sandwichJ2 bbqTxtJ">Top Seller <span class="sandwichJ">BBQ
@@ -288,7 +288,7 @@
             </div>
             <div class="col centerJ">
                 <div class="card cardJ">
-                    <img class="img-fluid hover" src="./assets/banhMiCard4.png" class="card-img-top"
+                    <img class=" hover" src="./assets/banhMiCard4.png" class="card-img-top"
                         alt="Picture of Ham and Cheese Croissant">
                     <div class="card-body">
                         <p class="card-text sansCollectionJ sandwichJ2 croissantMarginJ">#1 Croissant</p>
@@ -309,7 +309,7 @@
             </div>
             <div class="col centerJ">
                 <div class="card cardJ">
-                    <img class="img-fluid hover" src="./assets/banhMiCard5.png" class="card-img-top"
+                    <img class="hover" src="./assets/banhMiCard5.png" class="card-img-top"
                         alt="Picture of Ham and Cheese Baguette">
                     <div class="card-body">
                         <p class="card-text sansCollectionJ sandwichJ2 croissantMarginJ">#1 Baguette</p>
@@ -335,7 +335,7 @@
                 <div class="carousel-item active" data-bs-interval="2600">
                     <div class="row centerJ">
                         <div class="card cardJ">
-                            <img class="img-fluid hover" src="./assets/banhMiCard1.png" class="card-img-top"
+                            <img class=" hover" src="./assets/banhMiCard1.png" class="card-img-top"
                                 alt="Picture of Grilled PorkBanh Mi">
                             <div class="card-body">
                                 <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Favorite <span
@@ -354,7 +354,7 @@
                 <div class="carousel-item" data-bs-interval="2600">
                     <div class="row centerJ">
                         <div class="card cardJ">
-                            <img class="img-fluid hover" src="./assets/banhMiCard2.png" class="card-img-top"
+                            <img class=" hover" src="./assets/banhMiCard2.png" class="card-img-top"
                                 alt="Picture of Vegetarian Banh Mi">
                             <div class="card-body">
                                 <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Diet Friendly <span
@@ -373,7 +373,7 @@
                 <div class="carousel-item" data-bs-interval="2600">
                     <div class="row centerJ">
                         <div class="card cardJ">
-                            <img class="img-fluid hover" src="./assets/BanhMiCard3.png" class="card-img-top"
+                            <img class=" hover" src="./assets/BanhMiCard3.png" class="card-img-top"
                                 alt="Picture of BBQ Pork Banh Mi">
                             <div class="card-body">
                                 <p class="card-text sansCollectionJ sandwichJ2 bbqTxtJ">Top Seller <span
@@ -393,7 +393,7 @@
                 <div class="carousel-item" data-bs-interval="2600">
                     <div class="row centerJ">
                         <div class="card cardJ">
-                            <img class="img-fluid hover" src="./assets/banhMiCard4.png" class="card-img-top"
+                            <img class=" hover" src="./assets/banhMiCard4.png" class="card-img-top"
                                 alt="Picture of Ham and Cheese Croissant">
                             <div class="card-body">
                                 <p class="card-text sansCollectionJ sandwichJ2 croissantMarginJ">#1 Croissant</p>
@@ -417,7 +417,7 @@
                 <div class="carousel-item" data-bs-interval="2600">
                     <div class="row centerJ">
                         <div class="card cardJ">
-                            <img class="img-fluid hover" src="./assets/banhMiCard5.png" class="card-img-top"
+                            <img class=" hover" src="./assets/banhMiCard5.png" class="card-img-top"
                                 alt="Picture of Ham and Cheese Baguette">
                             <div class="card-body">
                                 <p class="card-text sansCollectionJ sandwichJ2 croissantMarginJ">#1 Baguette</p>
